# repo1_feed-service

./: .env.example  .flake8  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.md  issue.md
.github/workflow/: CI.yml
.github/workflows/: CI.yml
SocialFeed/: manage.py
SocialFeed/SocialFeed/: asgi.py  settings.py  urls.py  wsgi.py
common/: decorator.py  exceptions.py  views.py
common/tests/utils/: test_date_utils.py
config/: settings.py  urls.py
likes/: serializers.py  tests.py  urls.py  views.py
posts/: apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_content_id.py
posts/tests/views/: test_hashtag_recommend_list_view.py  test_posts_detail_view.py  test_posts_list_view.py  test_statics_list_view.py  test_statistics_list_view.py
shares/: apps.py  serializers.py  views.py
shares/tests/: test_shares_api.py
src/common/: exceptions.py  urls.py  utils.py  views.py
src/config/: settings.py  urls.py
src/likes/: serializers.py  tests.py  urls.py  views.py
src/posts/: apps.py  serializers.py  signals.py  views.py
src/posts/migrations/: 0001_initial.py  0002_post_content_id.py
src/shares/: urls.py  views.py
src/users/: managers.py  serializers.py  urls.py  views.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py
users/tests/views/: test_confirm_user_view.py  (+1 more)
(+7 files in other folders)
